@@ -20,13 +20,17 @@ $page['index']['handler'] = 'renderIndex';
 $page['rackspace']['title'] = 'Rackspace';
 $page['rackspace']['parent'] = 'index';
 $tab['rackspace']['default'] = 'Browse';
+$tab['rackspace']['edit'] = 'Manage rows';
 $tab['rackspace']['history'] = 'History';
-$tab['rackspace']['firstrow'] = 'Click me!';
-$trigger['rackspace']['firstrow'] = 'trigger_emptyRackspace';
 $tabhandler['rackspace']['default'] = 'renderRackspace';
+$tabhandler['rackspace']['edit'] = 'renderRackspaceRowEditor';
 $tabhandler['rackspace']['history'] = 'renderRackspaceHistory';
-$tabhandler['rackspace']['firstrow'] = 'renderFirstRowForm';
-$tabextraclass['rackspace']['firstrow'] = 'attn';
+$ophandler['rackspace']['edit']['addRow'] = 'addRow';
+$ophandler['rackspace']['edit']['updateRow'] = 'updateRow';
+$msgcode['rackspace']['edit']['addRow']['OK'] = 74;
+$msgcode['rackspace']['edit']['addRow']['ERR'] = 100;
+$msgcode['rackspace']['edit']['updateRow']['OK'] = 75;
+$msgcode['rackspace']['edit']['updateRow']['ERR'] = 100;
 
 $page['objects']['title'] = 'Objects';
 $page['objects']['parent'] = 'index';
