@@ -1,6 +1,7 @@
 0.17.0
 	new feature: file attachments (by Aaron)
 	update: display row name when listing objects. closes ticket 16 (by Aaron)
+	update: ability to manage rows from the Rackspace page in addition to the Dictionary
 	bugfix: show error message if snmp module isn't loaded.  closes ticket 43 (by Aaron)
 0.16.4 2008-11-04
 	bugfix: display VS/RS config block in RS pool view
